commit kj.txt file

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
         <p class="alert alert-info">
             基于NodeJS + Express + EJS + MongoDB 的拉勾网后台管理系统
         </p>
+        <p class="alert alert-info">
+            李鑫超级帅
+        </p>
     </div>
 
     <script src="/scripts/base/jquery.js"></script>
