--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             基于NodeJS + Express + EJS + MongoDB 的拉勾网后台管理系统
         </p>
         <p class="alert alert-info">
-            李鑫超级帅
+            李鑫超级帅8888888888888
         </p>
     </div>
 
